# aiaiai

./: .gitignore  README.md  main.py  mise.toml  pyproject.toml  sdxl-pose-copying.plan.md
.cursor/: worktrees.json
.cursor/rules/: mise.mdc
ai/lora/: __init__.py  sdxl.py
ai/text2image/: __init__.py  flux.py  flux2.py  sdxl.py  zimage.py
ai/upscaling/: sdxl.py
app/ai3-upscale/clients/ts/: client.ts
app/ai3-upscale/daemon/: main.py
chat/: lipstick.py
cli/: ai3-upscale.py
utils/: chars8.py  output.py  prompt.py  seed.py
workflows/: flux-cat.py
