[project]
name = "pytorching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "torch",
  "diffusers[torch]",
  "transformers",
  "safetensors",
  "accelerate",
  "huggingface-hub>=0.36.0",
  "protobuf>=6.33.1",
  "sentencepiece>=0.2.1",
]
