[project]
name = "pytorching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "torch",
  "torchvision",
  # "diffusers[torch]",
  "diffusers @ git+https://github.com/huggingface/diffusers",
  "transformers",
  "safetensors",
  "accelerate",
  "huggingface-hub>=0.36.0",
  "protobuf>=6.33.1",
  "sentencepiece>=0.2.1",
  "bitsandbytes>=0.48.2",
  # Pose extraction for ControlNet
  "controlnet-aux>=0.0.9",
  "peft>=0.18.0",
]
